libwx-perl (1:0.9901-1) UNRELEASED; urgency=low
 
  TODO: Investigate test failures

  [ Salvatore Bonaccorso ]
  * New upstream release
  * Remove debian/README.source as we use '3.0 (quilt) source package
    format now.
  * Bump Debhelper compat level to 8.
  * debian/control:
    - Bump versioned Build-Depends on debhelper to (>= 8).
    - Bump versioned Build-Depends on libextutils-xspp-perl to (>= 0.1602). 
  * debian/copyright: Update copyright years for upstream files.

  [ gregor herrmann ]
  * debian/watch: add uversionmangle to cope with future 2-digit minor
    versions.
  * debian/rules: use --max-parallel=1 instead of $(MAKE) -j1.

  [ Ansgar Burchardt ]
  * debian/control: Convert Vcs-* fields to Git.

  [ gregor herrmann ]
  * Set Standards-Version to 3.9.2 (no changes).
  * Add perl 5.14 as an alternative build dependency to libextutils-parsexs-perl.
    (Closes: #636762)

 -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 11 Jun 2011 10:55:39 +0200

libwx-perl (1:0.98-1) unstable; urgency=low

  * New upstream release
    - add epoch, to compensate for upstream going from 0.9702 -> 0.98
  * Standards-Version: 3.9.1 (no changes required)

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 18 Jan 2011 17:17:01 -0500

libwx-perl (0.9702-1) unstable; urgency=low

  * New upstream release
    - now requires at least ExtUtils::ParseXS version 2.2202 and
      ExtUtils:XSpp 0.11

 -- Chris Butler <chrisb@debian.org>  Thu, 06 May 2010 21:53:39 +0100

libwx-perl (0.9701-1) unstable; urgency=low

  * New upstream release
    - now requires at least ExtUtils::ParseXS version 2.2202, build-dep added
    - build-dep on ExtUtils:XSpp upped to version 0.9
  * Switched to source format 3.0 (quilt). Removed quilt invocation in rules
    and build-dep.
  * Updated upstream author copyright years in debian/copyright

 -- Chris Butler <chrisb@debian.org>  Sun, 28 Mar 2010 21:02:12 +0100

libwx-perl (0.96-2) unstable; urgency=low
